# Get_a_Frame_by_GStreamer

./: CMakeLists.txt  README.md  test.cpp
